--- a/src/main/webapp/hr/hr_report_employee_detail.xhtml
+++ b/src/main/webapp/hr/hr_report_employee_detail.xhtml
@@ -138,7 +138,7 @@
                                     </f:facet>
                                     <p:outputLabel value="#{s.person.nic}" />
                                 </p:column>
-                                <p:column headerText="DOB" >
+                                <p:column headerText="DOB" sortBy="#{s.person.dob.month}" >
                                     <f:facet name="header" >
                                         <p:outputLabel value="DOB" />
                                     </f:facet>
