--- a/src/main/webapp/hr/hr_report_month_end_employee_date_1.xhtml
+++ b/src/main/webapp/hr/hr_report_month_end_employee_date_1.xhtml
@@ -185,6 +185,12 @@
                                     </f:facet>
                                     <p:outputLabel value="#{ss.merhchantileDays}" style="font-size: 12px;"/>
                                 </p:column>
+                                <p:column rendered="#{!hrReportController.reportKeyWord.additionalDetails}" headerText="Merhcantile Days(Leave)" style="text-align: right;">
+                                    <f:facet name="header" >
+                                        <p:outputLabel value="Merhcantile Days(Leave)" />
+                                    </f:facet>
+                                    <p:outputLabel value="#{ss.merhchantileDaysLeave}" style="font-size: 12px;"/>
+                                </p:column>
                                 <p:column headerText="Poya Days" style="text-align: right;">
                                     <f:facet name="header" >
                                         <p:outputLabel value="Poya Days" />
@@ -328,7 +334,7 @@
                                         <td></td>
                                         <td></td>
                                     </tr>
-                                    <tr>
+<!--                                    <tr>
                                         <td>&nbsp;</td>
                                         <td></td>
                                         <td></td>
@@ -587,7 +593,7 @@
                                         <td></td>
                                         <td></td>
                                         <td></td>
-                                    </tr>
+                                    </tr>-->
                                 </table>
 
                                 <h:panelGrid columns="3" styleClass="noBorder" >
