--- a/src/main/webapp/hr/hr_staff_salary.xhtml
+++ b/src/main/webapp/hr/hr_staff_salary.xhtml
@@ -89,7 +89,7 @@
                                   rowKey="#{s.id}" 
                                   selection="#{staffController.selectedList}"
                                   rowIndexVar="i"
-                                  scrollable="true"
+                                  scrollable="true" rowStyleClass="#{((s.dateJoined eq staffSalaryController.salaryCycle.salaryFromDate)or(s.dateJoined gt staffSalaryController.salaryCycle.salaryFromDate)) and ((s.dateJoined eq staffSalaryController.salaryCycle.salaryToDate)or (s.dateJoined lt staffSalaryController.salaryCycle.salaryToDate)) ? 'greenText':''}"
                                   scrollHeight="250">
                         <p:column  selectionMode="multiple" >                            
                         </p:column>
@@ -100,11 +100,20 @@
                         <p:column headerText="Roster"  filterBy="#{s.roster.name}"  filterMatchMode="contains" >
                             <h:outputLabel value="#{s.roster.name}"/>
                         </p:column>
-                        <p:column headerText="Grade"  filterBy="#{s.grade}"  filterMatchMode="contains" >
-                            <h:outputLabel value="#{s.grade}"/>
+                        <p:column headerText="Resigned Date"  >
+                            <h:outputLabel value="#{s.dateLeft}">
+                                <f:convertDateTime pattern="yyyy MMM dd" />
+                            </h:outputLabel>
                         </p:column>
-                        <p:column headerText="Category" filterBy="#{s.staffCategory.name}"  filterMatchMode="contains">
-                            <h:outputLabel value="#{s.staffCategory.name}"/>
+                        <p:column headerText="Working Days(PH)">
+                            <h:outputLabel value="#{s.transWorkedDays}">
+                                <f:convertNumber pattern="##0" />
+                            </h:outputLabel>
+                        </p:column>
+                        <p:column headerText="Working Days(Work)">
+                            <h:outputLabel value="#{s.transWorkedDaysSalaryFromToDate}">
+                                <f:convertNumber pattern="##0" />
+                            </h:outputLabel>
                         </p:column>
                         <p:column headerText="Designation" filterBy="#{s.designation.name}"  filterMatchMode="contains">
                             <h:outputLabel value="#{s.designation.name}"/>
@@ -220,7 +229,7 @@
                         <p:column>
                             <p:commandButton process="@this" 
                                              update=":#{p:component('lst')}" 
-                                             value="Edit"  
+                                             value="Edit" 
                                             actionListener="#{staffSalaryController.onEditListener(i)}" onclick="onSubmitButton();">                              
                             </p:commandButton>                          
                         </p:column>
